# migratowl

./: .gitignore  LICENSE  README.md  langgraph.json  pyproject.toml  test_pipeline.py
migratowl/: config.py
migratowl/core/: analyzer.py  cache.py  changelog.py  changelog_cache.py  code_parser.py  http.py  impact.py  llm.py  patcher.py  prompts.py  rag.py  registry.py  report.py  scanner.py
migratowl/interfaces/: cli.py  mcp_server.py
migratowl/models/: schemas.py
tests/: conftest.py
tests/integration/: conftest.py  test_local_pipeline.py
tests/unit/: conftest.py  test_analyzer.py  test_cache.py  test_changelog.py  test_changelog_cache.py  test_cli.py  test_code_parser.py  test_config.py  test_http.py  test_impact.py  test_llm.py  test_logging.py  test_mcp_server.py  test_patcher.py  test_rag.py  test_registry.py  test_report.py  test_scanner.py  test_schemas.py
