[project]
name = "migratowl"
version = "0.1.0"
description = "AI-powered dependency migration analyzer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
dependencies = [
    "langgraph>=1.0.7,<2",
    "langsmith>=0.3,<1",
    "chromadb>=1.5,<2",
    "instructor>=1.14,<2",
    "fastmcp>=2.14,<3",
    "mcp>=1.25,<2",
    "openai>=2.21,<3",
    "anthropic>=0.82,<1",
    "tree-sitter>=0.25,<1",
    "tree-sitter-language-pack>=0.13",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "html2text>=2024.2",
]

[project.scripts]
migratowl = "migratowl.interfaces.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "langsmith>=0.3,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--ignore=tests/integration"
markers = ["integration: integration tests requiring external services (Ollama, network)"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["^\\.venv/", "^tests/integration/"]
